samples/_failures_safe/1761351538_002fb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a2bb9d91.c: In function ‘main’:
./samples/SAFE/__tmp_a2bb9d91.c:110:9: error: missing terminating " character
  110 |         "2024-01-15
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_a2bb9d91.c:110:9: error: expected expression at end of input
./samples/SAFE/__tmp_a2bb9d91.c:110:9: error: expected declaration or statement at end of input
